==> Menglingyu2333/RoadLineDetect_V1.0/BSP/AT32/at32f403a-start/applications/touch.c <==
#include "touch.h"
#include "lcd.h"
#include "stdlib.h"
#include "math.h"

void TP_Write_Byte(u8 num)
{
	u8 count=0;
	for(count=0;count<8;count++)
	{
		if(num&0x80)TDIN=1;
		else TDIN=0;
		num<<=1;
		TCLK=0;
		TCLK=1;		//上升沿有效
	}
}

u16 TP_Read_AD(u8 CMD)
{
	u8 count=0;
	u16 Num=0;
	TCLK=0;		//先拉低时钟
	TDIN=0; 	//拉低数据线
	TCS=0; 		//选中触摸屏IC
	TP_Write_Byte(CMD);//发送命令字
	rt_hw_us_delay(6);//ADS7846的转换时间最长为6us
	TCLK=0;
	rt_hw_us_delay(1);
	TCLK=1;		//给1个时钟，清除BUSY
	TCLK=0;
	for(count=0;count<16;count++)//读出16位数据,只有高12位有效
	{
		Num<<=1;
		TCLK=0;	//下降沿有效
		TCLK=1;
		if(DOUT)Num++;
	}
	Num>>=4;   	//只有高12位有效.
	TCS=1;		//释放片选
	return(Num);
}

u8 TP_Init(void)
{
	//注意,时钟使能之后,对GPIO的操作才有效
	//所以上拉之前,必须使能时钟.才能实现真正的上拉输出
	GPIO_InitType GPIO_InitStructure;	//GPIO

	//注意,时钟使能之后,对GPIO的操作才有效
	//所以上拉之前,必须使能时钟.才能实现真正的上拉输出
	RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_GPIOC  | RCC_APB2PERIPH_GPIOA  |RCC_APB2PERIPH_AFIO, ENABLE);

	GPIO_InitStructure.GPIO_Pins = GPIO_Pins_12;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT_PP;  //推挽输出
	GPIO_InitStructure.GPIO_MaxSpeed = GPIO_MaxSpeed_50MHz;
	GPIO_Init(GPIOC, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pins = GPIO_Pins_11;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_PU ;  //上拉输入
	GPIO_Init(GPIOC, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pins = GPIO_Pins_5|GPIO_Pins_7;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT_PP;  //推挽输出
	GPIO_InitStructure.GPIO_MaxSpeed = GPIO_MaxSpeed_50MHz;
	GPIO_Init(GPIOA, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pins = GPIO_Pins_6;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_PU ;  //上拉输入
	GPIO_Init(GPIOA, &GPIO_InitStructure);


  	TP_Read_XY(&tp_dev.x,&tp_dev.y);//第一次读取初始化
    TP_Adjust_Auto();

	return 1;
}
