==> dtnghia2206/STM32_Peripherals/STM32_Peripherals/Touch/Touch.c <==
#include "Touch.h"

void TP_Write_Byte(uint8_t num)
{
	uint8_t count = 0;
	for(count = 0; count < 8; count++)
	{
		if(num & 0x80)
			T_DIN_ON;
		else
			T_DIN_OFF;

		num <<= 1;
		T_CLK_OFF;
		HAL_Delay(1);
		T_CLK_ON;
	}
}

uint16_t TP_Read_AD(uint8_t CMD)
{
	uint8_t count = 0;
	uint16_t Num = 0;
	T_CLK_OFF;
	T_DIN_OFF;
	T_CS_OFF;
	TP_Write_Byte(CMD);
	HAL_Delay(6);
	T_CLK_OFF;
	HAL_Delay(1);
	T_CLK_ON;
	HAL_Delay(1);
	T_CLK_OFF;
	for(count = 0; count < 16; count++)
	{
		Num <<= 1;
		T_CLK_OFF;
		HAL_Delay(1);
		T_CLK_ON;
		if(T_DO) Num++;
	}
	Num >>= 4;
	T_CS_ON;
	return(Num);

}

uint8_t TP_Init(void)
{
	GPIO_InitTypeDef GPIO_InitStruct;

//	GPIO_InitStruct.Pin 	= T_IRQ_Pin | T_DO_Pin;
//	GPIO_InitStruct.Mode 	= GPIO_MODE_INPUT;
//	GPIO_InitStruct.Pull 	= GPIO_NOPULL;
//	GPIO_InitStruct.Speed 	= GPIO_SPEED_FREQ_LOW;
//	HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

    /* Configure Button pin as input with External interrupt */
    GPIO_InitStruct.Pin 	= T_IRQ_Pin;
    GPIO_InitStruct.Pull 	= GPIO_NOPULL;
    GPIO_InitStruct.Mode 	= GPIO_MODE_IT_FALLING;
    HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

    /* Enable and set Button EXTI Interrupt to the lowest priority */
    HAL_NVIC_SetPriority(EXTI1_IRQn, 0x0F, 0x00);
    HAL_NVIC_EnableIRQ(EXTI1_IRQn);

	GPIO_InitStruct.Pin 	= T_DO_Pin;
	GPIO_InitStruct.Mode 	= GPIO_MODE_INPUT;
	GPIO_InitStruct.Pull 	= GPIO_NOPULL;
	GPIO_InitStruct.Speed 	= GPIO_SPEED_FREQ_LOW;
	HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

	GPIO_InitStruct.Pin 	= T_CLK_Pin;
	GPIO_InitStruct.Mode 	= GPIO_MODE_OUTPUT_PP;
	GPIO_InitStruct.Pull 	= GPIO_NOPULL;
	GPIO_InitStruct.Speed 	= GPIO_SPEED_FREQ_LOW;
	HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

	GPIO_InitStruct.Pin 	= T_DIN_Pin | T_CS_Pin;
	GPIO_InitStruct.Mode 	= GPIO_MODE_OUTPUT_PP;
	GPIO_InitStruct.Pull 	= GPIO_NOPULL;
	GPIO_InitStruct.Speed 	= GPIO_SPEED_FREQ_LOW;
	HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);

	return 1;
}
